--- a/API_IA/requirements.txt
+++ b/API_IA/requirements.txt
@@ -1,13 +1,14 @@
-faiss-gpu==1.7.2
-Flask==3.0.3
-Flask-Cors==4.0.0
-langchain==0.1.16
-langchain-community==0.0.32
-langchain-core==0.1.42
-langchain-openai==0.1.3
-langchain-text-splitters==0.0.1
-oauthlib==3.2.0
-openai==1.17.1
-python-dotenv==1.0.1
-regex==2023.12.25
-requests==2.31.0
+faiss-gpu
+Flask
+Flask-Cors
+langchain
+langchain-community
+langchain-core
+langchain-openai
+langchain-text-splitters
+oauthlib
+openai
+python-dotenv
+regex
+requests
+gunicorn
